# tw-alpha-stack

./: .editorconfig  .gate_waivers.txt  .gitattributes  .gitignore  .gitignore_additions__alphacity.txt  .pre-commit-config.yaml  @{schema_ver=2025_09_29; ssot_hash=41D3D2195BFF2A01DA0FC61E3A165DF34635AD6FC8A8825FA62215700480C11A; data_ver=2025_10_27; model_id=v4x_p1p4_r1; wf_windows=System.Object[]; reports=System.Object[]}  AlphaCity_RunExtras_OneClick.bat  Install-Phase2-FactorTools.ps1  PSScriptAnalyzerSettings.psd1  QuickStart_Backtest.cmd  QuickStart_Weekly.cmd  README-Runbook.md  README.md  README.txt  README_Phase1_Test_Kit.md  README_UPDATE.md  README_fix_bundle_v2.txt  _code4_memory.md  _code6_memory.md  _env_current.txt  alphacity_nightly.bat  alphacity_nightly.bat.bak_20251013_155055  make_report_safe.py  mypy.ini  preflight_files.json  pyproject.toml  requirements-extras.txt  requirements.additions.txt  requirements.txt  requirements_lock_c.txt  requirements_lock_fromG.txt  requirements_sanitized.txt  ruff.toml  rules.local.yaml.broken  rules.override.yaml  rules.single.yaml  rules.yaml  rules.yaml.bak_20251013_144352  run_batch_backtests.py  (+4 more)
.bak/: Invoke-AlphaVerification.ps1.20250921-054414.bak  Invoke-AlphaVerification.ps1.20250921-055459.bak  Invoke-AlphaVerification.ps1.20250921-055751.bak  Invoke-AlphaVerification.ps1.20250921-060209.bak  Invoke-AlphaVerification.ps1.20250921-060820.bak  Invoke-AlphaVerification.ps1.20250921-062013.bak  Invoke-AlphaVerification.ps1.bak  finmind_backfill.py.20250921-061540.bak  market_report_all_in_one.py.bak  (+2 more)
(+47425 files in other folders)
