[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tw-alpha-stack"
version = "0.1.0"
description = "Taiwan stocks alpha pipeline: data -> features -> signals -> backtest -> report"
requires-python = ">=3.10,<3.12"
authors = [{name="you"}]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
